# texcweb

./: Cargo.toml  Dockerfile  Rocket.toml  index.html  posts.toml  texcreate-install.sh  texcreate.html
blog_views/: TexCreate Blog.html
posts/: 01~TexCreate Blog~2022-04-10.md  02~TexCreate 3.1.0 Plans~2022-04-26.md  03~TexCreate 3.2.0 Plans~2023-06-07.md
src/: base.rs  blog.rs  main.rs  repos.rs
src/blog/: page.rs
